@@ -8,6 +8,7 @@ FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
 - "add" now accepts link number as a second argument (suggested by JMCS)
 - removed support for chafa < 1.10, as announced in 2.4. python-pil is not used anymore. 
 - "opnk" now supports following link like in "opnk $URL XX" where XX is a link number.
+- new "preformat_wrap" option available in "theme" to wrap even <pre>
 
 ## 2.5 - January 30th 2025
 - "abbrevs" has been replaced by "alias"
